--- a/public/history.html
+++ b/public/history.html
@@ -12,8 +12,10 @@
   <!-- Navigation Bar -->
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="history.html">Data History</a></li>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="history.html">DATA HISTORY</a></li>
+    <li><a href="https://www.canva.com/design/DAGVnU-tdv8/hlkKbhKQldIM5eg-oG4Fpg/edit?utm_content=DAGVnU-tdv8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">ABOUT
+      PROJECT</a></li>
     </ul>
   </nav>
 
