--- a/public/index.html
+++ b/public/index.html
@@ -6,6 +6,14 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Auto-Ranging Ohmmeter</title>
   <link rel="stylesheet" href="main.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+  rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Inknut+Antiqua:wght@300;400;500;600;700;800;900&family=Instrument+Sans:ital,wght@0,400..700;1,400..700&family=Poppins:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+  rel="stylesheet">
 </head>
 
 <body>
@@ -14,15 +22,17 @@
 
   <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
-      <li><a href="history.html">Data History</a></li>
+      <li><a href="index.html">HOME</a></li>
+      <li><a href="history.html">DATA HISTORY</a></li>
+      <li><a href="https://www.canva.com/design/DAGVnU-tdv8/hlkKbhKQldIM5eg-oG4Fpg/edit?utm_content=DAGVnU-tdv8&utm_campaign=designshare&utm_medium=link2&utm_source=sharebutton">ABOUT
+      PROJECT</a></li>
     </ul>
   </nav>
 
   <!-- Main Content -->
 
   <main class="container">
-    <h1>Arduino Auto-Ranging Ohmmeter</h1>
+    <h1>Auto-Ranging Ohmmeter</h1>
 
     <div class="container2">
       <!-- Display elements for recent data -->
@@ -30,7 +40,7 @@
         <div id="resistanceDisplay">Resistance: -- Ω</div>
       </div>
       <div id="voltageDisplay">Voltage: -- V</div>
-      <div id="dateTimeDisplay">Date & Time: --</div>
+      <div id="dateTimeDisplay">Date and Time: --</div>
     </div>
 
     <!-- Button to trigger data fetch -->
