tried binding (throws error)

--- a/public/index.html
+++ b/public/index.html
@@ -44,7 +44,7 @@
     </div>
 
     <!-- Button to trigger data fetch -->
-    <button onclick="fetchRecentData()">Get Recent Data</button>
+    <button onclick="startFetchingAndRefreshing()">Get Recent Data</button>
 
     <!-- List to display additional fetched data, if necessary -->
     <ul id="historyList">
